# gradient-exhaustion

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit-fable-clean-2026-07-13.md  background.md  biblio-verification.md  checklist-publication.md  decisions.md  fiches-lecture.md  gate2-dossier.md  outreach-emails.md  pi-definition.en.md  pi-definition.md  prompts-opus.md  questions-simples.md  research-program.md  simulation-architecture.md  verification-pack.md
paper/: adversarial-review-model.md  adversarial-review-paper.md  af-post-minimal-model-plain.fr.md  af-post-minimal-model-plain.md  af-post-minimal-model.md  model-notes.md  paper.md  predictions.md  rederivation-blind.md
paper/figures/: cover.py
research/raw/: 1-gradual-disempowerment-economie-post-agi.md  2-cooperative-ai-multi-agent.md  4-mort-thermique-economique.md  5-critiques-framing-course-asi.md  6-personnes-communautes.md
sim/: __init__.py
sim/analysis/: __init__.py  analytic_check.py  figures.py  notes-preliminary-e3.md  notes-production-v1.md  phase.py  preliminary_e3.py  static_demand_map.py
sim/core/: __init__.py  agents.py  capture.py  dynamics.py  opportunities.py
sim/experiments/: __init__.py  production_v1.py  runner.py
sim/metrics/: __init__.py  indices.py
sim/strategies/: __init__.py  base.py  best_response.py  learning.py  replicator.py
sim/tests/: test_analytic.py  test_invariance.py  test_rules.py  test_sanity.py
